test/resources/type-checking/bad/Assignment3.cc
int main() {
  int x;
  x = true;

  return 0;
}
